# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: lint_check.yml
page_analyzer/: app.py  database.py  parser.py  validate.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  show.html  urls.html
